--- a/oly_frontend/index.html
+++ b/oly_frontend/index.html
@@ -8,6 +8,7 @@
   </head>
   <body class="dx-viewport">
     <div id="app"></div>
+    <script>window.require = () => {}</script>
     <script type="module" src="src/main.ts"></script>
 	
   </body>
